# agent_collab_treaty

./: .gitignore  AGENTS.md  README.md  copier.yml  next_steps.md  project_overview.md  pyproject.toml  work_log.md
.github/workflows/: release.yml  test-publish.yml  update-adopters-badge.yml
scripts/: count_adopters.sh
src/agent_collab_treaty/: __init__.py  adoption.py  cli.py  validation.py
template/: .copier-answers.yml.jinja  AGENTS.md.jinja  work_log.md  {% if 'aider' in agent_pointers %}.aider.conf.yml{% endif %}.jinja
template/.cursor/rules/: {% if 'cursor' in agent_pointers %}treaty.mdc{% endif %}.jinja
template/.windsurf/rules/: {% if 'windsurf' in agent_pointers %}treaty.md{% endif %}.jinja
tests/: test_adoption.py  test_cli.py  test_validation.py
work_log_archive/: work_log_2026-05-27_to_2026-06-30.md
